testsuite/tests/parsing/pr6604_2.compilers.reference
File "pr6604_2.ml", line 9, characters 1-2:
Error: Syntax error
